cmake_minimum_required(VERSION 3.17)
project(C__Prime)

set(CMAKE_CXX_STANDARD 14)

add_executable(C__Prime main.cpp)
add_executable(main1 "Copy control/Copy/Copy Assignment Operator.cpp")
add_executable(main2 "OOP/Inheritance/test.cpp")
add_executable(main3 "OOP/Inheritance/Visability.cpp")
add_executable(main4 "OOP/Inheritance/Scope.cpp")
add_executable(main5 "Copy control/Dynamic Memory Management/Dynamic Memory Management.cpp")
add_executable(main6 "Dynamic Memory/allocator.cpp")
add_executable(main7 "Copy control/Dynamic Memory Management/Dynamic Memory Management.cpp")
add_executable(main8 "Copy control/Move/Rvalue Reference.cpp")
add_executable(main9 "Copy control/Move/Rvalue Reference for Class Member.cpp")
add_executable(main10 "OOP/Copy Control/Copy Control And Inheritance.cpp")
