cmake_minimum_required(VERSION 3.17)
project(C__Prime)

set(CMAKE_CXX_STANDARD 14)

add_executable(main0 "C++ basic theory/Const/Const.cpp" "C++ basic theory/Pointer/Pointer.cpp" "C++ basic theory/Reference/Reference.cpp" "C++ basic theory/Type/Type.cpp")
add_executable(main1 "Copy control/Copy/Copy Assignment Operator.cpp" "Copy control/Copy/Copy Constructor.cpp")
add_executable(main2 "Copy control/Copy Control/Class Act As Ptr.cpp" "Copy control/Copy Control/Class Act As Value.cpp" "Copy control/Copy Control/Copy Control Example.cpp" "Copy control/Copy Control/Rule Of Three Or Five.cpp" "Copy control/Copy Control/Swap.cpp")
add_executable(main3 "Copy control/Dynamic Memory Management/Dynamic Memory Management.cpp")
add_executable(main4 "Copy control/Move/Move.cpp" "Copy control/Move/Move Iterator.cpp" "Copy control/Move/Rvalue Reference.cpp" "Copy control/Move/Rvalue Reference for Class Member.cpp")
add_executable(main5 "Dynamic Memory/allocator.cpp" "Dynamic Memory/Delete.cpp" "Dynamic Memory/New.cpp")
add_executable(main6 "Dynamic Memory/Dynamic Memory Example.cpp" "Dynamic Memory/Shared Ptr.cpp" "Dynamic Memory/Shared Ptr And New.cpp")
add_executable(main7 "Flow Control/Condition and Branch.cpp" "Flow Control/Flow Control.cpp" "Flow Control/Input and Output.cpp" "Flow Control/Loop.cpp")
add_executable(main8 "OOP/Copy Control/Constructor Inheritance.cpp" "OOP/Copy Control/Copy Control And Inheritance.cpp" "OOP/Copy Control/Virtual Deconstructor.cpp")
add_executable(main9 "OOP/Inheritance/Inheritance.cpp" "OOP/Inheritance/Scope.cpp" "OOP/Inheritance/test.cpp" "OOP/Inheritance/Virtual Function.cpp" "OOP/Inheritance/Visability.cpp")
add_executable(main10 "OverloadAndConvertion/ClassTypeConversion.cpp" "OverloadAndConvertion/FunctionCallOperator.cpp" "OverloadAndConvertion/OverLoadOperator.cpp")
add_executable(main11 "STL/Array/Array.cpp" "STL/Forward List/forward list.cpp")
add_executable(main12 "Generic Algorithm/Introduction.cpp" "Generic Algorithm/Iterator.cpp")
add_executable(main13 "Generic Algorithm/Lambda Expression/Lamdba Basic.cpp" "Generic Algorithm/Lambda Expression/Capture outside variable.cpp" "Generic Algorithm/Lambda Expression/Bind.cpp")
add_executable(main14 "Generic programming and template/Function template.cpp" "Generic programming and template/Class template.cpp" "Generic programming and template/Template param.cpp")
add_executable(main15 "Generic programming and template/Template param introduction.cpp" "Generic programming and template/Variadic template.cpp")